--- a/app/src/main/res/layout/activity_trending_repository_list_item_layout.xml
+++ b/app/src/main/res/layout/activity_trending_repository_list_item_layout.xml
@@ -2,14 +2,18 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.xapo.test.githubtrendingandroid.TrendingListActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    tools:context="com.xapo.test.githubtrendingandroid.activity.TrendingRepositoryListActivity">
 
     <TextView
+        android:id="@+id/name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text=""
+        android:textColor="#000000"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
